--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,9 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-
+        driver: 'pdo_pgsql'
+        server_version: '14.12'
+        charset: 'utf-8'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '16'
